@@ -1,6 +1,8 @@
 0.12 03nov2016
 * added option to enumerate supported sensors
 * added support for OS WGR800 and PCR800 sensors
+* added support for lacrosse rainfall messages
+* provide feedback when no permission to read usb device
 
 0.11 31oct2016
 * added parser for acurite 986 packets (thanks to andy)
